fix: fix broken styles

--- a/src/component/description/Description.css
+++ b/src/component/description/Description.css
@@ -5,7 +5,7 @@
   font-weight: 100;
 }
 .test-button-active, .observe-button-active {
-  background-color: #F9FBE7;
+  background-color: #FEFEFE;
   font-weight: bold;
 }
 .description-symetrie {
