--- a/src/student/StudentView.css
+++ b/src/student/StudentView.css
@@ -6,9 +6,6 @@
 .triangle-parent {
   padding-right: 0;
 }
-.triangle-container {
-  background-color: #F9FBE7;
-}
 .konvajs-content {
   width: 100% !important;
   height: 100% !important;
